--- a/src/DustyTables/DustyTables.fsproj
+++ b/src/DustyTables/DustyTables.fsproj
@@ -7,7 +7,6 @@
     <PropertyGroup>
         <Title>DustyTables</Title>
         <Description>Thin F# API for SqlClient for easy data access to ms sql server with functional seasoning on top</Description>
-        <!-- summary is not migrated from project.json, but you can use the <Description> property for that if needed. -->
         <PackageTags>f#, fsharp</PackageTags>
         <PackageProjectUrl>https://github.com/zaid-ajaj/DustyTables</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/zaid-ajaj/DustyTables/blob/master/LICENSE.md</PackageLicenseUrl>
@@ -15,19 +14,18 @@
         <RepositoryType>git</RepositoryType>
         <Authors>zaid-ajaj</Authors>
         <RepositoryUrl>https://github.com/zaid-ajaj/DustyTables</RepositoryUrl>
-        <Version>1.3.0</Version>
-        <PackageReleaseNotes>Added support for table valued parameters</PackageReleaseNotes>
+        <Version>2.0.0</Version>
+        <PackageReleaseNotes>Full rewrite and massive simplification</PackageReleaseNotes>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <Optimize>true</Optimize>
         <Tailcalls>true</Tailcalls>
     </PropertyGroup>
     <ItemGroup>
+        <Compile Include="RowReader.fs" />
         <Compile Include="Sql.fs" />
-        <Compile Include="OptionWorkflow.fs" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
-        <PackageReference Include="TaskBuilder.fs" Version="2.1.0" />
     </ItemGroup>
 </Project>
