--- a/DustyTables.Tests/DustyTables.Tests.fsproj
+++ b/DustyTables.Tests/DustyTables.Tests.fsproj
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="Tests.fs" />
         <Compile Include="Main.fs" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="../../src/DustyTables/DustyTables.fsproj" />
+        <ProjectReference Include="../DustyTables/DustyTables.fsproj" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Expecto" Version="9.0.0" />
