--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,16 @@
 init:
   - git config --global core.autocrlf input
+
+build:
+  verbosity: detailed
+
+install:
+  # install latest dotnet 5
+  - cmd: choco install dotnet
+
+os: Visual Studio 2019
+
 build_script:
-  - cmd: build.cmd
+  - cmd: dotnet run --project ./DustyTables.Build/DustyTables.Build.fsproj
+
 test: off
-version: 0.0.1.{build}
-artifacts:
-  - path: bin
-    name: bin
-  - path: dist
-    name: dist
