--- a/DustyTables/DustyTables.fsproj
+++ b/DustyTables/DustyTables.fsproj
@@ -14,8 +14,8 @@
         <RepositoryType>git</RepositoryType>
         <Authors>zaid-ajaj</Authors>
         <RepositoryUrl>https://github.com/zaid-ajaj/DustyTables</RepositoryUrl>
-        <Version>3.0.0</Version>
-        <PackageReleaseNotes>Major release. Use Tasks instead of Async and eliminate usage of results</PackageReleaseNotes>
+        <Version>4.0.0</Version>
+        <PackageReleaseNotes>Fix Sql.executeNonQueryAsync which returned a result where it shouldn't</PackageReleaseNotes>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <Optimize>true</Optimize>
